Fix speaker modal on mobile
fix centering and remove images

--- a/src/components/SpeakerCard.module.css
+++ b/src/components/SpeakerCard.module.css
@@ -101,7 +101,9 @@
         grid-column: span 12;
     }
     .modalImage {
-        justify-content: center;
-        min-width: 100%;
+        display: none;
+    }
+    .left {
+        width: auto;
     }
 }
